# video_frame_saver

./: .cliff.toml  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  python_opencv.py  update_changelog.ps1
.github/workflows/: release.yml
docs/: CODIGOS_DE_ERRO.txt  COMO_COMPILAR.md  GUIA_DE_USO.txt  MANUAL_COMPLETO.md  exemplo_de_log_file.txt
resources/: GUIA_DE_USO.txt  readme.txt
src/: main.rs
