[package]
name = "video_frame_saver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3", features = ["derive"] }
opencv = "0.93.3"
prettytable = "0.10"

[dev-dependencies]
git-cliff = "2.8.0"
