[package]
name = "video_frame_saver"
version = "1.6.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.31", features = ["derive"] }
fern = { version = "0.7.1", features = ["colored"] }
opencv = "0.93.3"
prettytable = "0.10"
log = "0.4"
humantime = "2.1.0"
anstyle = "1.0.10"

